--- a/src/app/components/account/login/login.component.html
+++ b/src/app/components/account/login/login.component.html
@@ -26,14 +26,16 @@
       />
     </div>
     <div class="d-flex justify-content-between">
-      <button
-        type="submit"
-        class="btn btn-outline-dark"
-        [disabled]="loginForm.invalid"
-      >
-        Giriş Yap
-      </button>
+      <button type="submit" class="btn btn-dark">Giriş Yap</button>
       <a class="mt-3">Şifremi unuttum</a>
     </div>
   </form>
+  <div class="register">
+    <p>Hesabınız yok mu? Kayıt olun</p>
+    <div>
+      <button class="btn btn-dark" [routerLink]="['/account/register']">
+        Kayıt ol
+      </button>
+    </div>
+  </div>
 </div>
