--- a/src/app/components/account/register/register.component.html
+++ b/src/app/components/account/register/register.component.html
@@ -63,13 +63,7 @@
       />
     </div>
     <div class="d-flex justify-content-between">
-      <button
-        type="submit"
-        class="btn btn-outline-dark"
-        [disabled]="registerForm.invalid"
-      >
-        Sign-Up
-      </button>
+      <button type="submit" class="btn btn-dark">Kayıt ol</button>
     </div>
   </form>
 </div>
