--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!isAdminRoute">
+<div *ngIf="isAdminRoute == false">
   <div class="hero_area">
     <app-header></app-header>
     <router-outlet></router-outlet>
