--- a/src/app/components/admin/admin-layout/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/components/admin/admin-layout/admin-sidebar/admin-sidebar.component.html
@@ -8,6 +8,10 @@
       <i class="fa-solid fa-diamond"></i>
       Ürünler
     </li>
+    <li [routerLink]="['/admin/categories']">
+      <i class="fa-solid fa-layer-group"></i>
+      Kategoriler
+    </li>
     <li [routerLink]="['/admin/orders']">
       <i class="fa-solid fa-box"></i>
       Siparişler
