admin panel products and categories completed

--- a/src/app/components/admin/admin-layout/admin-categories/update-categories/update-categories.component.html
+++ b/src/app/components/admin/admin-layout/admin-categories/update-categories/update-categories.component.html
@@ -24,6 +24,9 @@
           hidden
         />
         <label for="image" class="btn btn-secondary">Resim Seç</label>
+        <span class="ms-2 mt-1" *ngIf="!selectedImage && !previewUrl"
+          >Resim seçilmedi</span
+        >
         <span class="ms-2 mt-1" *ngIf="selectedImage">{{
           selectedImage.name
         }}</span>
