--- a/src/app/components/admin/admin-layout/admin-products/admin-products.component.css
+++ b/src/app/components/admin/admin-layout/admin-products/admin-products.component.css
@@ -1,5 +1,5 @@
 .content {
-  padding-top: 5rem;
+  padding-top: 1rem;
 }
 .search {
   display: inline-block;
@@ -16,64 +16,58 @@
     margin-left: 0.3rem;
   }
 }
-.btn {
-  float: right;
-  margin: 0 1rem 1rem 0;
+.header {
+  display: flex;
+  width: 100%;
+  margin-bottom: 1rem;
+  gap: 3rem;
+}
+.total-products {
+  display: flex;
+  align-items: flex-end;
+  align-self: flex-end;
+  gap: 1.5rem;
+  span {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.1rem;
+    font-weight: bold;
+  }
+}
+.header-buttons {
+  margin-left: auto;
+  margin-right: 1rem;
+  display: flex;
+  gap: 0.5rem;
 }
 .table-container {
   width: 100%;
+  height: 80vh;
+  overflow-y: scroll;
   overflow-x: auto;
   white-space: nowrap;
   -webkit-overflow-scrolling: touch;
   scrollbar-width: thin;
 }
 
-.resizable {
-  table-layout: fixed;
-  min-width: 100%;
-  width: max-content;
+.form-label {
+  font-weight: bold;
 }
-
-.resizable-column {
-  position: relative;
-  min-width: 150px;
-  width: auto; /* Sabit genişlik yerine otomatik genişlik */
-  cursor: col-resize;
-  user-select: none;
-  border-right: 1px solid #ddd;
-  border-top: 1px solid #ddd;
-  white-space: nowrap;
-}
-
-.resizable-column:after {
-  content: "";
-  position: absolute;
-  right: -2px;
-  top: 0;
-  height: 100%;
-  width: 4px;
-  background: transparent;
-  cursor: col-resize;
-}
-
-.resizable-column:last-child {
-  border-right: none;
-}
-
 th,
 td {
   position: relative;
-  overflow: visible; /* Gizli yerine görünür taşma */
-  text-overflow: clip; /* Üç nokta yerine kesme */
+  overflow: hidden;
+  text-overflow: ellipsis;
   white-space: nowrap;
-  min-width: 150px;
-  width: auto; /* Sabit genişlik yerine otomatik genişlik */
+  max-width: 20rem;
+  min-width: 5rem;
   padding: 8px;
+  border-right: 0.1rem solid #ddd;
+  border-top: 0.1rem solid #ddd;
+  text-align: center;
 }
 
-/* Yeniden boyutlandırma tutacağı için hover efekti */
-.resizable-column:hover:after {
-  background: rgba(0, 0, 0, 0.1);
+i {
+  cursor: pointer;
 }
 
 .spinner {
@@ -95,4 +89,28 @@ td {
   100% {
     transform: rotate(360deg);
   }
+}
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(128, 128, 128, 0.7);
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loading-content {
+  background-color: white;
+  padding: 2rem;
+  border-radius: 8px;
+  text-align: center;
+}
+.modal-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
 }
