--- a/src/app/components/admin/admin-layout/admin-products/admin-products.component.html
+++ b/src/app/components/admin/admin-layout/admin-products/admin-products.component.html
@@ -1,33 +1,130 @@
 <div class="content">
-  <div class="search">
-    <i class="fa-solid fa-magnifying-glass"></i>
-    <input type="search" placeholder="Id, Ürün Adı" />
+  <div class="header">
+    <div class="search">
+      <i class="fa-solid fa-magnifying-glass"></i>
+      <input
+        type="search"
+        placeholder="Id veya Ürün Adı ara"
+        [(ngModel)]="searchTerm"
+        (input)="onSearch()"
+      />
+    </div>
+    <div class="total-products">
+      <span>Toplam Ürün: {{ totalProducts }}</span>
+      <span *ngIf="isFiltered"
+        >Toplam Filtrenen Ürün: {{ totalFiltredProducts }}</span
+      >
+    </div>
+    <div class="header-buttons">
+      <button
+        class="btn btn-warning"
+        *ngIf="isFiltered"
+        (click)="removeFilters()"
+      >
+        Filtreleri kaldır
+      </button>
+      <button class="btn btn-secondary" (click)="openFilterModal()">
+        Filtrele
+      </button>
+      <button class="btn btn-dark" [routerLink]="['/admin/products/create']">
+        Yeni ürün ekle
+      </button>
+    </div>
   </div>
-  <button
-    class="btn btn-dark create-product"
-    [routerLink]="['/admin/products/create']"
-  >
-    Yeni ürün ekle
-  </button>
-  <button class="btn btn-secondary filter-product">Filtrele</button>
-  <div class="table-container">
+  <div class="table-container" #scrollable>
     <table class="table table-striped resizable">
       <thead>
         <tr>
-          <th class="resizable-column">Id</th>
-          <th class="resizable-column">Ürün Adı</th>
-          <th class="resizable-column">Renk</th>
-          <th class="resizable-column">Beden</th>
-          <th class="resizable-column">Açıklama</th>
-          <th class="resizable-column">Fiyat</th>
-          <th class="resizable-column">Stok</th>
-          <th class="resizable-column">Kategori</th>
-          <th class="resizable-column">Alt Kategori</th>
-          <th class="resizable-column">Oluşturulma Tarihi</th>
+          <th></th>
+          <th>
+            Id
+            <i
+              *ngIf="!noSorting"
+              class="fa-solid fa-arrow-up ms-3"
+              (click)="sortBy('id_ascending')"
+              title="Id'ye göre artan sırala"
+              [style.color]="ascendingId ? '#c51717' : ''"
+            ></i>
+            <i
+              *ngIf="!noSorting"
+              class="fa-solid fa-arrow-down ms-3"
+              (click)="sortBy('id_descending')"
+              title="Id'ye göre azalan sırala"
+              [style.color]="descendingId ? '#c51717' : ''"
+            ></i>
+          </th>
+          <th>Ürün Adı</th>
+          <th>Renk</th>
+          <th>Beden</th>
+          <th>Açıklama</th>
+          <th>
+            Fiyat
+            <i
+              *ngIf="!noSorting"
+              class="fa-solid fa-arrow-up ms-3"
+              (click)="sortBy('price_ascending')"
+              title="Fiyata göre artan sırala"
+              [style.color]="ascendingPrice ? '#c51717' : ''"
+            ></i>
+            <i
+              *ngIf="!noSorting"
+              class="fa-solid fa-arrow-down ms-3"
+              (click)="sortBy('price_descending')"
+              title="Fiyata göre azalan sırala"
+              [style.color]="descendingPrice ? '#c51717' : ''"
+            ></i>
+          </th>
+          <th>
+            Stok
+            <i
+              *ngIf="!noSorting"
+              class="fa-solid fa-arrow-up ms-3"
+              (click)="sortBy('stock_ascending')"
+              title="Stoğa göre artan sırala"
+              [style.color]="ascendingStock ? '#c51717' : ''"
+            ></i>
+            <i
+              *ngIf="!noSorting"
+              class="fa-solid fa-arrow-down ms-3"
+              (click)="sortBy('stock_descending')"
+              title="Stoğa göre azalan sırala"
+              [style.color]="descendingStock ? '#c51717' : ''"
+            ></i>
+          </th>
+          <th>Kategori</th>
+          <th>Alt Kategori</th>
+          <th>
+            Oluşturulma Tarihi
+            <i
+              *ngIf="!noSorting"
+              class="fa-solid fa-arrow-up ms-3"
+              (click)="sortBy('date_ascending')"
+              title="Tarihe göre artan sırala"
+              [style.color]="ascendingDate ? '#c51717' : ''"
+            ></i>
+            <i
+              *ngIf="!noSorting"
+              class="fa-solid fa-arrow-down ms-3"
+              (click)="sortBy('date_descending')"
+              title="Tarihe göre azalan sırala"
+              [style.color]="descendingDate ? '#c51717' : ''"
+            ></i>
+          </th>
         </tr>
       </thead>
       <tbody *ngIf="products$ | async as products; else loading">
         <tr *ngFor="let product of products">
+          <td>
+            <i
+              class="fa-solid fa-pen-to-square ms-4 me-3"
+              (click)="editProduct(product)"
+            ></i>
+            <i
+              class="fa-solid fa-xmark"
+              style="color: #c51717"
+              (click)="deleteProduct(product.id)"
+            ></i>
+          </td>
           <td>{{ product.id }}</td>
           <td>{{ product.name }}</td>
           <td>{{ product.color }}</td>
@@ -35,8 +132,8 @@
           <td>{{ product.description }}</td>
           <td>{{ product.price }}</td>
           <td>{{ product.stock }}</td>
-          <td>{{ product.categoryId }}</td>
-          <td>{{ product.subcategoryId }}</td>
+          <td>{{ product.categoryName }}</td>
+          <td>{{ product.subcategoryName }}</td>
           <td>{{ product.createdAt }}</td>
         </tr>
         <tr *ngIf="!products.length">
@@ -44,8 +141,154 @@
         </tr>
       </tbody>
     </table>
+    <div class="d-flex justify-content-center mb-3">
+      <button
+        class="btn btn-sm btn-secondary"
+        *ngIf="!allLoaded"
+        (click)="loadMore()"
+      >
+        Daha fazla ürün göster
+      </button>
+    </div>
   </div>
 </div>
+<div class="loading-overlay" *ngIf="deleting">
+  <div class="loading-content">
+    <p class="mt-3">Ürün Siliniyor, Lütfen Bekleyin...</p>
+  </div>
+</div>
+<!-- Modal -->
+<div
+  class="modal fade"
+  id="filterModal"
+  tabindex="-1"
+  aria-labelledby="filterModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="filterModalLabel">Ürün Filtrele</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="filterForm" (ngSubmit)="filterProducts()">
+          <div
+            class="mb-3"
+            *ngIf="categories$ | async as categories; else loading"
+          >
+            <label class="form-label" for="category">Kategori</label>
+            <select
+              class="form-select"
+              name="category"
+              formControlName="categoryId"
+            >
+              <option value="" style="color: #999999" selected>
+                --Kategori Seçin--
+              </option>
+              <option
+                [ngValue]="category.id"
+                *ngFor="let category of categories"
+              >
+                {{ category.name }}
+              </option>
+            </select>
+          </div>
+          <div
+            class="mb-3"
+            *ngIf="subcategories$ | async as subcategories; else loading"
+          >
+            <label class="form-label">Alt Kategori</label>
+            <select class="form-select" formControlName="subcategoryId">
+              <option value="" style="color: #999999" selected>
+                --Alt Kategori Seçin--
+              </option>
+              <option
+                [ngValue]="subcategory.id"
+                *ngFor="let subcategory of subcategories"
+              >
+                {{ subcategory.name }}
+              </option>
+            </select>
+          </div>
+          <div class="mb-3">
+            <label class="form-label">Fiyat Aralığı</label>
+            <div class="d-flex gap-2">
+              <input
+                type="number"
+                class="form-control"
+                placeholder="Min"
+                formControlName="minPrice"
+              />
+              <input
+                type="number"
+                class="form-control"
+                placeholder="Max"
+                formControlName="maxPrice"
+              />
+            </div>
+          </div>
+          <div class="mb-3">
+            <label class="form-label">Stok Durumu</label>
+            <select class="form-select" formControlName="stock">
+              <option value="" style="color: #999999" selected>
+                --Stok Durumu Seçin--
+              </option>
+              <option value="1">Stokta var</option>
+              <option value="0">Stokta yok</option>
+            </select>
+          </div>
+          <div class="mb-3" *ngIf="products$ | async as products; else loading">
+            <label class="form-label">Renk</label>
+            <select class="form-select" formControlName="color">
+              <option value="" style="color: #999999" selected>
+                --Renk Seçin--
+              </option>
+              <option
+                [ngValue]="product.color"
+                *ngFor="let product of products | uniqueBy : 'color'"
+              >
+                {{ product.color }}
+              </option>
+            </select>
+          </div>
+          <div class="mb-3" *ngIf="products$ | async as products; else loading">
+            <label class="form-label">Beden</label>
+            <select class="form-select" formControlName="size">
+              <option value="" style="color: #999999" selected>
+                --Beden Seçin--
+              </option>
+              <option
+                [ngValue]="product.size"
+                *ngFor="let product of products | uniqueBy : 'size'"
+              >
+                {{ product.size }}
+              </option>
+            </select>
+          </div>
+          <div class="modal-buttons">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Kapat
+            </button>
+            <button type="submit" class="btn btn-dark" data-bs-dismiss="modal">
+              Filtrele
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal End -->
 <ng-template #loading>
   <div class="loading-container">
     <div class="spinner"></div>
