--- a/src/app/components/index/last-products/last-products.component.css
+++ b/src/app/components/index/last-products/last-products.component.css
@@ -2,6 +2,7 @@
 .card {
   margin-top: 50px;
   border: none;
+  cursor: pointer;
 }
 .card-title {
   white-space: nowrap; /* Tek satırda kalmasını sağlar */
