--- a/src/app/components/index/slider/slider.component.html
+++ b/src/app/components/index/slider/slider.component.html
@@ -1,79 +1,11 @@
 <section class="slider_section">
-  <div class="slider_container">
+  <div class="slider_container" *ngIf="subcategories$ | async as subcategories">
     <owl-carousel-o [options]="customOptions">
-      <ng-template carouselSlide>
+      <ng-template carouselSlide *ngFor="let subcategory of subcategories">
         <div>
-          <img
-            class="img-fluid"
-            src="https://localhost:7281/static/images/category/CEKET.webp"
-            alt=""
-          />
+          <img class="img-fluid" [src]="subcategory.imageUrl" alt="" />
         </div>
       </ng-template>
-      <ng-template carouselSlide>
-        <div>
-          <img
-            class="img-fluid"
-            src="https://localhost:7281/static/images/category/GOMLEK.webp"
-            alt=""
-          /></div
-      ></ng-template>
-      <ng-template carouselSlide>
-        <div>
-          <img
-            class="img-fluid"
-            src="https://localhost:7281/static/images/category/JEAN.webp"
-            alt=""
-          /></div
-      ></ng-template>
-      <ng-template carouselSlide>
-        <div>
-          <img
-            class="img-fluid"
-            src="https://localhost:7281/static/images/category/KABAN.webp"
-            alt=""
-          /></div
-      ></ng-template>
-      <ng-template carouselSlide>
-        <div>
-          <img
-            class="img-fluid"
-            src="https://localhost:7281/static/images/category/KAZAK.webp"
-            alt=""
-          /></div
-      ></ng-template>
-      <ng-template carouselSlide>
-        <div>
-          <img
-            class="img-fluid"
-            src="https://localhost:7281/static/images/category/MONT.webp"
-            alt=""
-          /></div
-      ></ng-template>
-      <ng-template carouselSlide>
-        <div>
-          <img
-            class="img-fluid"
-            src="https://localhost:7281/static/images/category/PANTOLON.webp"
-            alt=""
-          /></div
-      ></ng-template>
-      <ng-template carouselSlide>
-        <div>
-          <img
-            class="img-fluid"
-            src="https://localhost:7281/static/images/category/SWEATSHIRT.webp"
-            alt=""
-          /></div
-      ></ng-template>
-      <ng-template carouselSlide>
-        <div>
-          <img
-            class="img-fluid"
-            src="https://localhost:7281/static/images/category/TSHIRT.webp"
-            alt=""
-          /></div
-      ></ng-template>
     </owl-carousel-o>
   </div>
 </section>
